--- a/GeneralClashConfig.ini
+++ b/GeneralClashConfig.ini
@@ -55,8 +55,8 @@ ruleset=🍎 苹果服务,clash-classic:https://raw.githubusercontent.com/blackm
 ruleset=📲 Telegram,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml
 ruleset=🤖 Discord,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.yaml
 ruleset=🎮 游戏平台,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.yaml
-ruleset=🎦 metatube,clash-classic:https://gist.githubusercontent.com/pakjoeng/f4e12486d0aa2cfc47c00316e3d3bd3e/raw/
-ruleset=🪣 docker,clash-classic:https://gist.githubusercontent.com/pakjoeng/95d05be0f89aa0e11aa27d6974c32044/raw/
+ruleset=🎦 metatube,clash-classic:https://raw.githubusercontent.com/pakjoeng/clash-rules/refs/heads/main/clash-rule-metatube.yaml
+ruleset=🪣 docker,clash-classic:https://raw.githubusercontent.com/pakjoeng/clash-rules/refs/heads/main/clash-rule-docker.yaml
 ruleset=🚀 国外流量,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯 国内流量,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 国内流量,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
