--- a/clash-rule-metatube.yaml
+++ b/clash-rule-metatube.yaml
@@ -1,5 +1,6 @@
 payload:
   - DOMAIN-SUFFIX,caribbeancompr.com
+  - DOMAIN-SUFFIX,av-league.com  
   - DOMAIN-SUFFIX,getchu.com
   - DOMAIN-SUFFIX,h4610.com
   - DOMAIN-SUFFIX,mywife.cc
