--- a/GeneralClashConfig.ini
+++ b/GeneralClashConfig.ini
@@ -69,10 +69,10 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 国外流量`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
 custom_proxy_group=✈️ 手动选择`select`.*
 custom_proxy_group=🛩️ 手动选择备用`select`.*
-custom_proxy_group=🇭🇰 香港节点`select`(HK|hk|HongKong|香港)`
+custom_proxy_group=🇭🇰 香港节点`select`(HK|hk|HongKong|Hong Kong|香港)`
 custom_proxy_group=🇯🇵 日本节点`select`(JP|Japan|日本)`
 custom_proxy_group=✈️ 新加坡节点`select`(SG|Singapore|新加波|新加坡)`
-custom_proxy_group=🇺🇸 美国节点`select`(US|USA|美国|美)`
+custom_proxy_group=🇺🇸 美国节点`select`(US|United States|USA|美国|美)`
 custom_proxy_group=🚁 自建节点`select`(自建|Craig|hk-vmess|HY|海晏河清|backup|_)
 custom_proxy_group=🛩️ 免费节点`select`.*
 custom_proxy_group=🎯 国内流量`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点`
