添加国家类型的自动选择

--- a/GeneralClashConfig.ini
+++ b/GeneralClashConfig.ini
@@ -66,46 +66,50 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 国外流量`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🚀 国外流量`select`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
 custom_proxy_group=✈️ 手动选择`select`.*
 custom_proxy_group=🛩️ 手动选择备用`select`.*
 custom_proxy_group=🇭🇰 香港节点`select`(HK|hk|HongKong|Hong Kong|香港)`
+custom_proxy_group=🇭🇰 香港自动`url-test`(HK|hk|HongKong|Hong Kong|香港)`(IPEL|ipel)`https://www.google.com.hk`300,,50
 custom_proxy_group=🇯🇵 日本节点`select`(JP|Japan|日本)`
+custom_proxy_group=🇯🇵 日本自动`url-test`(JP|Japan|日本)`(IPEL|ipel)`https://www.google.com`300,,50
 custom_proxy_group=✈️ 新加坡节点`select`(SG|Singapore|新加波|新加坡)`
+custom_proxy_group=✈️ 新加坡自动`url-test`(SG|Singapore|新加波|新加坡)`(IPEL|ipel)`https://www.google.com`300,,50
 custom_proxy_group=🇺🇸 美国节点`select`(US|United States|USA|美国|美)`
+custom_proxy_group=🇺🇸 美国自动`url-test`(US|United States|USA|美国|美)`(IPEL|ipel)`https://www.google.com`300,,50
 custom_proxy_group=🚁 自建节点`select`(自建|Craig|hk-vmess|HY|海晏河清|backup|_)
 custom_proxy_group=🛩️ 免费节点`select`.*
-custom_proxy_group=🎯 国内流量`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点`
+custom_proxy_group=🎯 国内流量`select`[]DIRECT`(电信|联通|移动)`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点`
 custom_proxy_group=🛸 IP归属地伪装`select`[]🎯 国内流量`(CN|电信|联通|移动)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🧚 AI`select`[]🇺🇸 美国节点`[]✈️ 新加坡节点`[]🇯🇵 日本节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🎦 metatube`select`[]🇯🇵 日本节点`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=📹 YouTube`select`[]🚀 国外流量`[]🇭🇰 香港节点`(尼日利亚|NG)`(土耳其|TR|Turkey)`(蒙古|MN)`(澳门|MO)`(RU)`(尼泊尔|NP)`(阿塞拜疆)`(孟加拉|BD)`(约旦|JO)`(柬埔寨|KH)`(阿根廷|AR)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🎥 Netflix`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点`(新加坡|坡|狮城|SG|Singapore)`(台|新北|彰化|TW|Taiwan)`(港|HK|Hong Kong)
-custom_proxy_group=🐹 DisneyPlus`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点`(新加坡|坡|狮城|SG|Singapore)`(台|新北|彰化|TW|Taiwan)`(港|HK|Hong Kong)
-custom_proxy_group=📽️ PrimeVideo`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🎦 HBO`select`(台|新北|彰化|TW|Taiwan)`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🎬 EMBY`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🎯 国内流量`(Emby|emby)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🍎 AppleTV`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=📺 巴哈姆特`select`(台|TW|Taiwan|港|HK|Hong Kong)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=📺 Bilibili`select`[]🎯 国内流量`(港|HK|Hong Kong)`(台|TW|Taiwan)`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🎵 Spotify`select`[]🎯 国内流量`(菲律宾|PH)`(巴基斯坦|PK)`(土耳其|TR|Turkey)`(尼日利亚|NG)`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🎶 TikTok`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🌍 国外媒体`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🌏 国内媒体`select`[]🎯 国内流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=📲 Telegram`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🎯 国内流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🤖 Discord`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🎯 国内流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=👨‍💻 GitHub`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🎯 国内流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🇯🇵 日本节点`[]✈️ 新加坡节点`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=📢 谷歌FCM`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🍎 苹果服务`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🎮 游戏平台`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🪣 docker`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🎯 国内流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🇯🇵 日本节点`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🎯 国内流量`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
-custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点
-custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 故障转移`fallback`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔮 负载均衡`load-balance`(^(?!.*(电信|联通|移动)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🧚 AI`select`[]🇺🇸 美国自动`[]🇺🇸 美国节点`[]✈️ 新加坡节点`[]✈️ 新加坡自动`[]🇯🇵 日本节点`[]🇯🇵 日本自动`[]🇭🇰 香港自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🎦 metatube`select`[]🇯🇵 日本自动`[]🇯🇵 日本节点`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=📹 YouTube`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🎥 Netflix`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🐹 DisneyPlus`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=📽️ PrimeVideo`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🎦 HBO`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🎬 EMBY`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🍎 AppleTV`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=📺 巴哈姆特`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=📺 Bilibili`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🎵 Spotify`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🎶 TikTok`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🌍 国外媒体`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🌏 国内媒体`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=📲 Telegram`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🤖 Discord`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=👨‍💻 GitHub`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=📢 谷歌FCM`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🍎 苹果服务`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🎮 游戏平台`select`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🪣 docker`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]🎯 国内流量`[]🚀 国外流量`[]🇭🇰 香港节点`[]🇭🇰 香港自动`[]🇯🇵 日本自动`[]✈️ 新加坡自动`[]🇺🇸 美国自动`[]✈️ 手动选择`[]🛩️ 手动选择备用`[]🚁 自建节点`[]🛩️ 免费节点
+custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(电信|联通|移动|IPEL|ipel)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 故障转移`fallback`(^(?!.*(电信|联通|移动|IPEL|ipel)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔮 负载均衡`load-balance`(^(?!.*(电信|联通|移动|IPEL|ipel)).*)`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
 
 enable_rule_generator=true
